MangoBajito/tests/Lenguajes_2/Declaracion/errors/09-array_negro.mng
# Test 09: Error de Tipo array negro.
se_prende(){
	culito decl0: negro[1] = [2];
	culito decl1: negro[1] = [1.79];
	culito decl2: negro[1] = [1.79769e+308];
	culito decl3: negro[1] = ["hola"];
	culito decl4: negro[1] = [Nolsa];
	culito decl5: negro[2] = ['1', 2];
	culito decl6: negro[1] = 'c';
};